--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demo app showing how to implement singleton like objects in Express, with currying and high-order functions",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "node ./build/index.js"
   },
   "repository": {
     "type": "git",
@@ -13,8 +13,7 @@
   "keywords": [
     "Express",
     "Currying",
-    "High-Order",
-    "Functions",
+    "High-Order Functions",
     "Demo",
     "App",
     "Tutorial"
