--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-watch": "^3.1.4"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "http-status": "^1.0.1"
   }
 }
