--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "http-status": "^1.0.1"
+    "http-status": "^1.0.1",
+    "winston": "^2.4.2"
   }
 }
